# opcua-interop

./: .gitignore  LICENSE  Makefile  PLAN.md  README.md  RELEASE_NOTES_v0.3.0.md  REQUIREMENTS.md  compose.yaml
.github/: dependabot.yml
.github/workflows/: build.yml  candidate.yml  release.yml  smoke.yml
certs/: README.md  generate.sh
docs/: CLIENT_CONTRACT.md
fixtures/baseline/: README.md  fixture.json
fixtures/schema/: opcua-fixture.schema.json
milo/: Dockerfile  pom.xml
milo/src/main/java/io/otfabric/opcuacompat/: Main.java
milo/src/main/java/io/otfabric/opcuainterop/: CapabilitiesCommand.java  ClientCommand.java  FixtureLoader.java  FixtureModel.java  InteropNamespace.java  Main.java  NodeIdParser.java  ResultBuilder.java  ServerCommand.java  ValidateCommand.java
milo/src/main/java/org/eclipse/milo/opcua/sdk/client/subscriptions/: CreateMonitoredItemsWithTimestamps.java
milo/src/main/resources/: logback.xml
milo/src/test/java/io/otfabric/opcuainterop/: FixtureLoaderTest.java
open62541/: CMakeLists.txt  Dockerfile
open62541/src/: client.c  client.h  fixture.c  fixture.h  main.c  output.c  output.h  server.c  server.h
open62541/tests/: fixture_test.c
schemas/: capabilities.schema.json  client-result.schema.json
scripts/: shutdown-test.sh  smoke.sh  validate-fixtures.sh  wait-ready.sh
